<resources>
    <string name="app_name">GoogleMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="no_map">No Map</string>
    <string name="login_thabo">Login Thabo</string>
    <string name="login_peter">Login Peter</string>
    <string name="show_family_location">Show Family Location</string>
    <string name="login_nelson">Login Nelson</string>
    <string name="login_susan">Login Susan</string>
</resources>